# WenoStandalone

./: .gitignore  CMakeLists.txt  README.md  wenoss.sh
inputs/: weno_input.nml  weno_standalone.f90
results/amd_mp_ex/: weno5_profile_domain_stats.csv  weno5_profile_kernel_stats.csv  weno5_profile_kernel_trace.csv  weno5_profile_memory_allocation_stats.csv  weno5_profile_memory_allocation_trace.csv  weno5_profile_memory_copy_stats.csv  weno5_profile_memory_copy_trace.csv
results/amd_mp_roof_ex/: log.txt  pmc_perf.csv  profiling_config.yaml  roofline.csv  sysinfo.csv
results/amd_mp_roof_ex/perfmon/: pmc_perf_0.txt  pmc_perf_1.txt  pmc_perf_2.txt
results/cce_mp_ex/: weno5_profile_agent_info.csv  weno5_profile_domain_stats.csv  weno5_profile_hip_api_stats.csv  weno5_profile_hip_api_trace.csv  weno5_profile_kernel_stats.csv  weno5_profile_kernel_trace.csv  weno5_profile_memory_allocation_stats.csv  weno5_profile_memory_allocation_trace.csv  weno5_profile_memory_copy_stats.csv  weno5_profile_memory_copy_trace.csv  weno5_profile_scratch_memory_stats.csv  weno5_profile_scratch_memory_trace.csv
results/cce_mp_roof_ex/: log.txt  pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
results/cce_mp_roof_ex/perfmon/: pmc_perf_0.txt  pmc_perf_1.txt  pmc_perf_2.txt
tests/golden/: weno5.txt
toolchain/: optimize_amdflang.sh  profile_weno5_rocprofv3.sh  requirements.txt
toolchain/old/: HANDOFF.md  PROGRESS.md
